rename login, logout to sign in, sign out
